--- a/docs/05_cta/css/cta_styles_ver3.css
+++ b/docs/05_cta/css/cta_styles_ver3.css
@@ -1,20 +1,19 @@
 :root {
    
-    --cp_cta-padding-tb: 0.6em;
-    --cp_cta-padding-lr: 0.9em;
+    --cp_cta-padding-tb: 0.7em;
+    --cp_cta-padding-lr: 1em;
     --cp_cta-bar: 0.45em;
     
     --cp_cta-icon-size: 1.5em;
     --cp_cta-icon-padding: 0.45em;
     --cp_cta-icon-position: calc(1em / 1.5 * 0.9);
     
-    --cp_cta-fontsize: 12px;
-    --cp_cta-large-fontsize: 14px;
+    --cp_cta-fontsize: 15px;
+    --cp_cta-large-fontsize: 18px;
     --cp_cta-minw: 10ch;
     
     --cp_cta-2nd-hover: 1px;
     
-    --cp_cta-hover: #6AA700;
     
     
     
@@ -29,16 +28,16 @@
 @media screen and (min-width: 1024px) {
     :root {
 
-    --cp_cta-fontsize: 14px;
-    --cp_cta-large-fontsize: 16px;
+    --cp_cta-fontsize: 16px;
+    --cp_cta-large-fontsize: 20px;
     }
 }
 
 @media screen and (min-width: 1350px) {
     :root {
         
-    --cp_cta-fontsize: 16px;
-    --cp_cta-large-fontsize: 18px;
+    --cp_cta-fontsize: 18px;
+    --cp_cta-large-fontsize: 22px;
     }
 }
 
@@ -47,12 +46,13 @@
     }
 }
 
+/*=================== cta container styles ========================*/
 
 .cp_cta_primary {
     display: block;
     width: fit-content;
     padding: var(--cp_cta-padding-tb) var(--cp_cta-padding-lr);
-    background-color: var(--nv-green);
+    background-color: var(--nv-1-5-1a);
     color: var(--nv-16);
     font-weight: 700;
     font-size: var(--cp_cta-fontsize);
@@ -62,7 +62,7 @@
 }
 .cp_cta_primary:is(:hover, :focus, :active) {
     color: var(--nv-16);
-    background-color: var(--cp_cta-hover);
+    background-color: var(--nv-green);
 }
 
 
@@ -81,7 +81,7 @@
 }
 .cp_cta_secondary:is(:hover, :focus, :active) {
     color: var(--nv-green);
-    background-color: rgba(118, 185, 0, 0.2);
+    background-color: var(--nv-16);
 /*    padding: calc(var(--cp_cta-padding-tb) - var(--cp_cta-2nd-hover)) calc(var(--cp_cta-padding-lr) - var(--cp_cta-2nd-hover));*/
 /*    border-width: calc(2px + var(--cp_cta-2nd-hover));*/
 /* border-width causes layout shift and performance problems, use box-shadow instead */
@@ -106,15 +106,20 @@
     display: block;
     width: fit-content;
     padding-right: var(--cp_cta-icon-size);
-    color: var(--nv-green);
+    padding-bottom: 2px;
+    color: var(--nv-0);
+    text-decoration: 2px currentcolor underline;
+    text-underline-offset: 0.2em;
     font-weight: 700;
     font-size: var(--cp_cta-fontsize);
     line-height: 1.25;
+    white-space: nowrap;
     position: relative;
     transition: var(--02transition); 
+    overflow: hidden;
 }
 .cp_cta_tertiary:is(:hover, :focus, :active) {
-    color: var(--cp_cta-hover);
+    color: var(--nv-green);
 }
 .cp_cta_tertiary.chevron::after {
     content: '';
@@ -127,23 +132,50 @@
     top: 50%;
     transform: translateY(-50%);
 }
-.cp_cta_tertiary.chevron:is(:hover, :focus, :active)::after {
-    content: '';
-    background-image: url(../assets/ic_chevron_darkgreen_shape_thick.svg);
-}
-
-
 
 .large.large {
     font-size: var(--cp_cta-large-fontsize);
 }
 
+.cp_cta_tertiary_wrap {
+    display: block;
+    color: var(--nv-0);
+    text-decoration: 2px currentcolor underline;
+    text-underline-offset: 0.2em;
+    font-weight: 700;
+    font-size: var(--cp_cta-fontsize);
+    line-height: 1.25;
+    overflow: hidden;
+}
+.cp_cta_tertiary_wrap:is(:hover, :focus, :active) {
+    color: var(--nv-green);
+}
+.cp_cta_tertiary_wrap .no-break {
+    white-space: nowrap;
+    padding-right: var(--cp_cta-icon-size);
+    position: relative;
+}
+.cp_cta_tertiary_wrap .no-break::after {
+    content: ' ';
+    display: inline-block;
+    width: var(--cp_cta-icon-size);
+    height: var(--cp_cta-icon-size);
+    background: url(../assets/ic_chevron_green_shape_thick.svg) no-repeat center / cover;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
 
+
+
+/*=================== cta icon ========================*/
 
 .iconleft {
     position: relative;
     padding-left: calc(var(--cp_cta-padding-lr) + var(--cp_cta-icon-size) + var(--cp_cta-icon-padding));
 }
+
 .ic_font, .ic_font_chevron {
   font-family: 'Material Icons';
   font-weight: normal;
@@ -163,7 +195,6 @@
     left: var(--cp_cta-icon-position);
     top: 50%;
     transform: translateY(-50%);
-    transition: var(--02transition);
 /*    transiition for border increase, padding decrease positioning*/
 }
 .ic_svg {
@@ -184,8 +215,20 @@
 .ic_font_chevron {
     left: unset;
     right: 0;
+    color: var(--nv-green);
 }
 
+
+.cp_link {
+    color: unset;
+    text-decoration: 2px var(--nv-green) underline;
+    text-underline-offset: 0.2em;
+}
+
+
+
+
+/*====================== new styles=====================*/
 .minwidth {
     min-width: 300px;
     min-width: calc(var(--cp_cta-padding-lr) * 2 + var(--cp_cta-minw));
@@ -200,7 +243,6 @@
 }
 
 
-/*====================== new styles=====================*/
 .cp_cta_primary2 {
     display: block;
     width: fit-content;
@@ -262,14 +304,41 @@
     font-size: var(--cp_cta-fontsize);
     line-height: 1.25;
     text-decoration: underline 2px solid transparent;
-    text-underline-offset: 0.1em;
+    text-underline-offset: 0.2em;
 }
 .cp_cta_link:is(:hover, :focus, :active) {
     text-decoration-color: var(--nv-green);
 }
 .cp_cta_link .no-break {
     white-space: nowrap;
-/*    padding-right: 1em;*/
+    padding-right: var(--cp_cta-icon-size);
+    position: relative;
+}
+.cp_cta_link .no-break::after {
+    content: ' ';
+    display: inline-block;
+    width: var(--cp_cta-icon-size);
+    height: var(--cp_cta-icon-size);
+    background: url(../assets/ic_chevron_green_shape_thick.svg) no-repeat center / cover;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.cp_cta_link.runt::after {
+     content: '';
+    display: inline-block;
+    width: var(--cp_cta-icon-size);
+    height: 1.2em;
+    vertical-align: text-bottom;
+    background: url(../assets/ic_chevron_green_shape_thick.svg) no-repeat center / cover;   
+}
+
+
+/*
+.cp_cta_link .no-break {
+    white-space: nowrap;
 }
 .cp_cta_link .no-break::after, .cp_cta_link.runt::after {
     content: '';
@@ -277,30 +346,10 @@
     width: var(--cp_cta-icon-size);
     height: 1.2em;
     vertical-align: text-bottom;
-/*    height and vertical alignment may cause line-height changes */
     background: url(../assets/ic_chevron_green_shape_thick.svg) no-repeat center / cover;   
 }
+*/
+/*    height and vertical alignment may cause line-height changes */
+
 /*the chevron may wrap to next line by itself, use span tag to avoid it */
 
-.cp_cta_link2 {
-    color: var(--nv-1-11);
-    font-weight: 700;
-    font-size: var(--cp_cta-fontsize);
-    line-height: 1.25;
-/*    line-height: 1.5;*/
-    display: block;
-}
-.cp_cta_link2:hover > span {
-    border-bottom: 2px solid var(--nv-green);
-}
-.cp_cta_link2 .no-break {
-    white-space: nowrap;
-}
-.cp_cta_link2 .no-break::after, .cp_cta_link2.runt::after {
-    content: '';
-    display: inline-block;
-    width: var(--cp_cta-icon-size);
-    height: 1.2em;
-    vertical-align: text-bottom;
-    background: url(../assets/ic_chevron_green_shape_thick.svg) no-repeat center / cover;
-}
