--- a/docs/css/02_base.css
+++ b/docs/css/02_base.css
@@ -45,7 +45,7 @@
     --padding-lr: 10px;
     --padding-section: var(--padding-tb) var(--padding-lr);
     
-    /*    ============= spacing =============*/
+    /*    ============= sizing =============*/
     
     --sz_icon-s: 16px;
     --sz_icon-m: 24px;
