--- a/docs/01_table/archive/css/01_table_qsc.css
+++ b/docs/01_table/archive/css/01_table_qsc.css
@@ -39,7 +39,7 @@ main {
     padding-top: 128px;
     padding-bottom: 128px;
 }
-main.padding > :nth-child(n + 2) {
+.wrapper > :nth-child(n + 2) {
     margin-top: 32px;
 }
 
@@ -169,7 +169,6 @@ td {
     overflow: auto;
     width: 100%;
     max-height: 90vh;
-    scrollbar-width: none;
 }
     .tablescroll::-webkit-scrollbar {
         display: none;
