--- a/docs/01_table/archive/css/02_table_vgpu.css
+++ b/docs/01_table/archive/css/02_table_vgpu.css
@@ -24,7 +24,7 @@
 
 /*=========== base ===========*/
 
-main.padding > :nth-child(n + 2) {
+.wrapper > :nth-child(n + 2) {
     margin-top: 32px;
 }
 
@@ -143,7 +143,6 @@ tr:not(.transparent, .transparentlast) td:nth-child(13)::after {
         overflow: auto;
         width: 100%;
         height: 90vh;
-        scrollbar-width: none;
     }
 
     .tablescroll::-webkit-scrollbar {
