--- a/docs/01_table/archive/css/03_table_isv.css
+++ b/docs/01_table/archive/css/03_table_isv.css
@@ -26,7 +26,7 @@
 }
 
 /*=========== base ===========*/
-main.padding > :nth-child(n + 2) {
+.wrapper > :nth-child(n + 2) {
     margin-top: 32px;
 }
 
@@ -59,7 +59,7 @@ thead {
     height: var(--table-head-height);
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 1;
     margin-bottom: 120px;
     /*    end of scroll */
 }
@@ -207,7 +207,6 @@ td li {
         overflow: auto;
         width: 100%;
         height: 90vh;
-        scrollbar-width: none;
     }
 
     .tablescroll::-webkit-scrollbar {
@@ -227,7 +226,6 @@ td li {
 /*        firefox fix*/
         position: sticky;
         left: 0;
-        z-index: 1;
     }
 
     .vendorrow img {
