--- a/docs/10_card/css/card.css
+++ b/docs/10_card/css/card.css
@@ -2,6 +2,7 @@
     --cp_card-minw: min(80vw, 290px);
     --cp_card-maxw: 800px;
     --cp_card-padding: 16px;
+    --cp_card-padding-l: 24px;
     
     --cp_card-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
     --cp_card-shadow2: 0px 4px 12px rgba(0, 0, 0, 0.2);
@@ -34,6 +35,7 @@
 @media screen and (min-width: 640px) {
     :root {
         --cp_card-padding: 20px;
+        --cp_card-padding-l: 32px;
         --3col: repeat(2, 1fr);
         --2col: repeat(2, 1fr);
         --align-lines-p: 7;
@@ -47,6 +49,7 @@
 @media screen and (min-width: 1024px) {
     :root {
         --cp_card-padding: 24px;
+        --cp_card-padding-l: 40px;
         --3col: repeat(3, 1fr);
         --align-lines-lead: 3;
     }
@@ -56,6 +59,7 @@
     :root {
 
         --cp_card-padding: 32px;
+        --cp_card-padding-l: 48px;
         --swap-layout: flex;
         --swap-asepct: unset;
         --swap-imgw: 33%;
@@ -333,7 +337,7 @@ section:nth-child(6) > ul:last-of-type .cardpadding:first-child {
     -webkit-mask-image: linear-gradient(to left, rgba(0,0,0,1) 0% 20%, rgba(0,0,0,0) 60%);
 }
 .cp_card_promo_base div {
-    width: 80%;
+    width: 66.66%;
     position: relative;
     z-index: 1;
 }
